# sparql-cgmes-tutorial

./: .gitignore  NOTES  README.md  pyproject.toml
exercises/: 01_simple_select.py  02_sparql_joins.py  03_graph_traversal.py  05_eq_lookups.py
exercises/data/dummy/: first_intro.xml  load_and_gen.xml  load_and_gen_switch.xml  load_and_gen_transformer.xml  second_intro.xml  single_gen.xml  single_load.xml
src/sparql_tutorial/: __init__.py  download_cgmes.py
tutorial/: 01_intro.md  02_sparql_joins.md  03_graph_traversal.md  04_cim_cgmes.md  04_cim_cgmes_bus_branch.md  05_the_eq_profile.md
