[project]
name = "sparql-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{name = "Statnett"}]
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "rdflib>=7.1.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
